fixed the spacing on my css

--- a/index.html/styles/styles.css
+++ b/index.html/styles/styles.css
@@ -12,11 +12,12 @@ nav a {
 h1 {
     color: steelblue;
 }
-img{
+
+img {
     width: 200px;
     height: auto;
     margin: 1rem;
-    border:1 px solid #000;
+    border: 1px solid #000; /* fixed the spacing here */
     padding: 1rem;
 }
 
@@ -27,24 +28,30 @@ main {
 aside {
     width: 20rem;
     margin: 1rem;
-    border: 1px solid rgba(0,0,0,0.2);
+    border: 1px solid rgba(0, 0, 0, 0.2);
     padding: 1rem;
-    background-color:aqua;
-    color:blue;
+    background-color: aqua;
+    color: blue;
     text-align: center;
 }
-aside img{
+
+aside img {
     width: 200px;
     height: auto;
 }
-main img{
+
+main img {
     width: 150px;
     height: auto;
 }
-p{ padding: 0;}
 
-footer{
+p {
+    padding: 0;
+}
+
+footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
 }
+
